<resources>
    <string name="app_name">MarineSoft</string>
    <string name="background">Background</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_marinesoft">Welcome To MarineSoft</string>
    <string name="marinesoft">MarineSoft</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="signout">Sign Out</string>
    <string name="registration_details">Registration Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="userid">Choose User Name</string>
    <string name="submit">Submit</string>
    <string name="species">Species</string>
    <string name="quantity">Quantity</string>
    <string name="time">Time</string>
    <string name="EmailAddress" />
    <string name="know_all_about_fishes">Know All About Fishes</string>
    <string name="signin_to_continue">SignIn To Continue</string>
    <string name="signup_to_continue">SignUp To Continue</string>
    <string name="image_of_fishes">Image Of Fishes</string>
    <string name="trevally_fish">Trevally Fish</string>
    <string name="tuna_fish">Tuna Fish</string>
    <string name="rainbow_trout">Rainbow Trout</string>
    <string name="monk_fish">Monk Fish</string>
    <string name="saradine_fishes">Saradine Fishes</string>
    <string name="gar_fish">Gar Fish</string>
    <string name="atlantic_bluefin_tuna">Atlantic Bluefin Tuna</string>
    <string name="chinese_sturgeon">Chinese Sturgeon</string>
    <string name="beluga_sturgeon">Beluga Sturgeon</string>
    <string name="european_eel">European Eel</string>
    <string name="back_button">Back Button</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="graph">Graph</string>
    <string name="analytical">Analytical</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_name_if_you_know">Enter Name If You Know</string>
</resources>