<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home_menu"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/graph"
            android:icon="@drawable/ic_baseline_auto_graph_24"
            android:title="@string/graph"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/imageUpload"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/upload_image"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/analytic"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/analytical"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/signOut"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/signout"/>
    </group>
</menu>