<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInPage">

    <TextView
        android:id="@+id/logoView"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:contentDescription="@string/logo"
        android:fontFamily="@font/aladin"
        android:letterSpacing="0.05"
        android:paddingStart="4dp"
        android:paddingTop="15dp"
        android:paddingEnd="4dp"
        android:text="@string/marinesoft"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="296dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/welcome_to_marinesoft"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/signin_to_continue"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainText"
        tools:ignore="TextContrastCheck" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainText1"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/emailText1"
            android:layout_width="321dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/text_background"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/textPassword1"
            android:layout_width="321dp"
            android:layout_height="53dp"
            android:layout_below="@+id/emailText1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:background="@drawable/text_background"
            android:ems="10"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText1" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="321dp"
            android:layout_height="53dp"
            android:layout_below="@+id/textPassword1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ocean_button"
            android:text="@string/signin"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword1"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/registerButton1"
            android:layout_width="321dp"
            android:layout_height="53dp"
            android:layout_below="@+id/signIn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border"
            android:text="@string/register"
            android:textColor="#1976D2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>